[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/circle.png" type="Texture" id=2]
[ext_resource path="res://scenes/trail/Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Single Step.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sounds/5 Menu Screen Slide SFX 03.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/sfx_sounds_button14.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
custom_solver_bias = 1.0
radius = 15.5

[sub_resource type="Animation" id=2]
resource_name = "Invisible"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.211765, 0.219608 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.820809, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.230799, 0.795898, 0.170994, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.515406, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.805598, 0.907715, 0.634691, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="StyleBoxTexture" id=10]
texture = SubResource( 9 )
region_rect = Rect2( 686, 85, 2, 0 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.12605, 0.817927, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.0567325, 0.0551576, 0.256734, 1, 0.176092, 0.171204, 0.796875, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="StyleBoxTexture" id=13]
texture = SubResource( 12 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.518207, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.632843, 0.799664, 0.910156, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="StyleBoxTexture" id=16]
texture = SubResource( 15 )
region_rect = Rect2( 0, 0, 2048, 1 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DashSkillTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="InvisibleSkillTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="InvisibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartInvisibleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimModulate" type="AnimationPlayer" parent="."]
anims/Invisible = SubResource( 2 )

[node name="Trail" parent="." instance=ExtResource( 3 )]
color = Color( 0.345098, 0.647059, 0.941176, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 2.0
margin_right = 512.0
margin_bottom = 32.0
custom_constants/separation = 50
alignment = 1

[node name="DashBox" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 287.0
margin_right = 487.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/DashBox"]
margin_right = 200.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "DASH COOLDOWN"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HBoxContainer/DashBox"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 14 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 10 )
max_value = 15.0
step = 1.0
value = 15.0
percent_visible = false

[node name="DashProgTimer" type="Timer" parent="CanvasLayer/HBoxContainer/DashBox"]
one_shot = true

[node name="InvisibleBox" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 537.0
margin_right = 737.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/InvisibleBox"]
margin_right = 200.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "INVISIBLE COOLDOWN"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HBoxContainer/InvisibleBox"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 14 )
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 16 )
max_value = 30.0
step = 1.0
value = 30.0
percent_visible = false

[node name="InviProgTimer" type="Timer" parent="CanvasLayer/HBoxContainer/InvisibleBox"]
one_shot = true

[node name="WashBox" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
visible = false
margin_left = 662.0
margin_right = 862.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/WashBox"]
margin_right = 200.0
margin_bottom = 14.0
text = "WASH COOLDOWN"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HBoxContainer/WashBox"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 14 )
max_value = 15.0
step = 1.0
value = 15.0
percent_visible = false

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Invisible" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
[connection signal="timeout" from="DashSkillTimer" to="." method="_on_DashSkillTimer_timeout"]
[connection signal="timeout" from="InvisibleSkillTimer" to="." method="_on_InvisibleSkillTimer_timeout"]
[connection signal="timeout" from="InvisibleTimer" to="." method="_on_InvisibleTimer_timeout"]
[connection signal="timeout" from="StartInvisibleTimer" to="." method="_on_StartInvisibleTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/HBoxContainer/DashBox/DashProgTimer" to="." method="_on_DashProgTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/HBoxContainer/InvisibleBox/InviProgTimer" to="." method="_on_InviProgTimer_timeout"]
